[package]
name = "rusb-test"
version = "0.1.0"
authors = ["Brent Gardner <bgardner@squarelabs.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.6.4"
anyhow = "1.0.32"
log = "0.4.11"
pretty_env_logger = "0.4.0"
libusb1-sys = "0.4.2"
futures = "0.3.5"
futures-executor = "0.3.5"
libc = "0.2.77"
byte-slice-cast = "0.3"
